# Data-Structures-wet-1

./: .gitmodules  AbstractAVL.h  HorseList.h  HorseMap.h  Pair.h  README.md
DS_wet1_Winter_2024-2025/: AVL.h  AVLNode.h  AVLTree.h  AbstractAVL.h  AllInclusions.h  CMakeLists.txt  Herd.cpp  Herd.h  Horse.cpp  Horse.h  HorseTreeHead.h  IndexAble.h  LinkedList.h  NonOwningHorseAVL.h  ProjectFiles.h  README.md  commands  main.out  main25a1.cpp  my_executable  plains25a1.cpp  plains25a1.h  test.out  test0.in
DS_wet1_Winter_2024-2025/tests/: my_executable
preservation/: AVLNode.h  AVLTree.h  AbstractAVL.h  CMakeLists.txt  Herd.cpp  Herd.h  Horse.h  HorseTree.h  IndexAble.h  ProjectFiles.h  TraceAble.h  add-testing-tools.sh  plains25a1.cpp  plains25a1.h
קוד חמישי בערב מטל/: AVLTree.h  Herd.cpp  Herd.h  Horse.cpp  Horse.h  LinkedList.h
